# KyPost-for-Linux

./: .gitignore  AGENTS.md  CMakeLists.txt  Linux_QT_Client_Plan.md  README.md  TESTING.md
app/: CMakeLists.txt  main.cpp
app/contacts/: ContactFieldMapping.h  ContactListModel.cpp  ContactListModel.h  ContactsController.cpp  ContactsController.h
app/general/: GeneralController.cpp  GeneralController.h
app/mail/: MailController.cpp  MailController.h
app/pairing/: MfaController.cpp  MfaController.h  PairingController.cpp  PairingController.h
app/pgp/: PgpQrController.cpp  PgpQrController.h
app/push/: NotificationDispatcher.cpp  NotificationDispatcher.h  PushPayloadParser.cpp  PushPayloadParser.h  UnifiedPushConnector.cpp  UnifiedPushConnector.h
app/qml/: DesktopRoot.qml  MobileRoot.qml  qml.qrc
app/qml/components/: AddressBookPickerDialog.qml  AutocompleteDropdown.qml  Avatar.qml  DangerButton.qml  EmptyState.qml  GhostButton.qml  HyperlinkDialog.qml  IconButton.qml  MutedHint.qml  PillTab.qml  PrimaryButton.qml  RepeaterField.qml  RichBodyEditor.qml  SectionLabel.qml  StatusBadge.qml  ThemedScrollBar.qml  ThemedTextField.qml
app/qml/pages/: Compose.qml  ContactDetail.qml  ContactsList.qml  EmailDetail.qml  MfaApproval.qml  Pairing.qml  Settings.qml
app/qml/utils/: format.js
app/resources/: fonts.qrc
app/theme/: ThemeController.cpp  ThemeController.h
app/tray/: TrayController.cpp  TrayController.h
core/: CMakeLists.txt  placeholder.cpp
core/db/: ContactDao.cpp  ContactDao.h  Database.cpp  Database.h  EmailDao.cpp  EmailDao.h  FolderDao.cpp  FolderDao.h  GroupDao.cpp  GroupDao.h  MigrationSql.h.in  NativeContactLinkDao.cpp  NativeContactLinkDao.h  PendingContactChangeDao.cpp  PendingContactChangeDao.h  PushDao.cpp  PushDao.h  SqlUtil.h
core/db/migrations/: 001_initial.sql  002_native_contact_links.sql  003_extended_contact_fields.sql  004_contact_self_and_merged.sql
core/domain/: ContactPhotoRepository.cpp  ContactPhotoRepository.h  ContactSyncReconciliation.cpp  ContactSyncReconciliation.h  ContactSyncRepository.cpp  ContactSyncRepository.h  DevicePairing.h  DeviceRegistrationService.cpp  DeviceRegistrationService.h  GroupsRepository.cpp  GroupsRepository.h  MailRepository.cpp  MailRepository.h  PairingStore.cpp  PairingStore.h  PgpQrRepository.cpp  PushRepository.cpp  PushRepository.h  TransportStateMachine.cpp  TransportStateMachine.h
core/models/: Contact.h  ContactFieldJson.h  Email.h  Group.h  KeywordSettings.h  MfaChallenge.h  PushNotification.h  StandardFolder.cpp  StandardFolder.h
core/net/: ContactPhotoClient.cpp  ContactPhotoClient.h  ContactSyncClient.cpp  ContactSyncClient.h  DeregisterClient.cpp  DeregisterClient.h  GroupsClient.cpp  GroupsClient.h  HttpClient.cpp  HttpClient.h  MfaResponseClient.cpp  MfaResponseClient.h  NativeRegistrationClient.cpp  NativeRegistrationClient.h  NetworkError.cpp  NetworkError.h  NtfySubscriber.cpp  NtfySubscriber.h  PgpQrClient.cpp  PgpQrClient.h  RelayAuth.h  RelayMailSource.cpp  RelayMailSource.h
core/stores/: ContactPhotoCache.cpp  ContactPhotoCache.h  CursorStore.cpp  CursorStore.h  SecureStore.h  SecureStoreFile.cpp  SecureStoreFile.h  SettingsStore.cpp  SettingsStore.h
core/theme/: ThemeManager.cpp  ThemeManager.h
core/vcard/: VCardContact.cpp  VCardContact.h
docs/: SETUP.md
tests/: CMakeLists.txt
tests/app/contacts/: ContactListModelTest.cpp  (+1 more)
(+60 files in other folders)
