cmake_minimum_required(VERSION 3.21)
project(LlamaMail LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

option(LLAMA_QT6 "Build against Qt 6 / Kirigami KF6 (Flatpak targets)" ON)

find_package(ECM QUIET NO_MODULE)
if(ECM_FOUND)
  list(APPEND CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
endif()

if(LLAMA_QT6)
  find_package(Qt6 6.4 REQUIRED COMPONENTS Core Network Sql Quick Qml QuickControls2)
  find_package(KF6Kirigami REQUIRED)
  set(QT_TARGET_PREFIX Qt6)
  set(KIRIGAMI_TARGET KF6::Kirigami)
else()
  find_package(Qt5 5.15 REQUIRED COMPONENTS Core Network Sql Quick Qml QuickControls2)
  find_package(KF5Kirigami2 REQUIRED)
  set(QT_TARGET_PREFIX Qt5)
  set(KIRIGAMI_TARGET KF5::Kirigami2)
endif()

add_subdirectory(core)
add_subdirectory(app)
enable_testing()
add_subdirectory(tests)
